      support
    * Update to Standard-Version: 3.9.2.0 (added Homepage: field to
      debian/control)
    * Unversion ofx's conflict with libofx2; it's been long enough that only
      libofx4 should be in the wild.
    * Update libofx-dev description
    * Add build-depends on the autotools suite, as one of our debian patches
      modifies Makefile.am files
  * Add debian/watch file
  * debian/rules:
    * Back up generated files during the build, in order to minimize noise in
      debdiffs. In order to ensure these files are regenerated, debian/rules
      will delete the upstream-supplied versions after the backup.
    * Regenerate libtoolize/aclocal/automake/autoheader/autoconf generated
      files. This is required for the
      0001-Suppress-help2man-info-page-reference patch
    * Use the copy of libcurl.m4 in aclocal; this suppresses an autoconf
      warning
  * Use the dh autosequencer to perform the build.
    * debian/rules: Use dh(1) for most actions.
    * debian/libofx4.install, debian/libofx-dev.install, debian/ofx.install:
      Add install files so we can use dh_install rather than manual
      dh_movefiles invocations
    * debian/libofx-dev.docs: Install HTML docs and sample files via
      dh_installdocs
    * debian/dirs: Removed as unnecessary
    * debian/compat: Update debhelper compatibility level to 7, now that
      we're using the autosequencer
  * New patches:
    * 0001-Suppress-help2man-info-page-reference.patch:
      Suppress reference to nonexistent info page in generated manpages
    * 0002-Fix-formatting-of-ofxdump-usage-message-so-help2man-.patch:
      Fix leading spaces in ofxdump --help output confusing help2man and
      breaking the ofxdump(1) manpage
    * 0003-Fix-autoconf-warning-due-to-bad-libtool-invoca.patch:
      Fix bad invocation of libtool in configure.in breaking the build with
      autoconf >= 2.68
    * 0004-Reference-the-m4-directory-for-macro-files.patch: